--- a/prometheus.yml
+++ b/prometheus.yml
@@ -1,18 +1,17 @@
 global:
-  scrape_interval: 10s   # 최소 간격
+  scrape_interval: 5s   # 데이터 수집 최소 간격
 
 scrape_configs:
-  - job_name: 'node'
-    static_configs:  # worker node 정적 ip 할당
-      - targets:
-          - '211.183.4.128:9100'
-          - '211.183.4.129:9100'
-          - '211.183.4.130:9100'
-          - '211.183.4.131:9100'
-          - '211.183.4.132:9100'
-          - '211.183.4.133:9100'
-    #dns_sd_configs:   worker node 자동 ip 할당
-      #- names:
-       #   - 'tasks.node-exporter'
-        #type: 'A'
-        #port: 9100
+  - job_name: 'node-exporter'
+
+    dockerswarm_sd_configs:
+      - host: unix:///var/run/docker.sock
+        role: tasks
+    
+    
+    # DNS로 가져온 컨테이너의 IP를 무시하고, 대신 호스트 IP를 스크랩
+
+    relabel_configs:
+      - source_labels: [__meta_dockerswarm_node_address]
+        target_label: __address__
+        replacement: $1:9100
