--- a/prometheus.yml
+++ b/prometheus.yml
@@ -1,15 +1,18 @@
 global:
   scrape_interval: 5s   # 데이터 수집 최소 간격
 
+# 메트릭 수집 대상
+
 scrape_configs:
   - job_name: 'node-exporter'
 
-    dockerswarm_sd_configs:
+    # 컨테이너(task) 단위로 수집
+
+    dockerswarm_sd_configs:   
       - host: unix:///var/run/docker.sock
         role: tasks
-    
-    
-    # DNS로 가져온 컨테이너의 IP를 무시하고, 대신 호스트 IP를 스크랩
+        
+    # 컨테이너의 IP 대신 호스트 IP를 스크랩
 
     relabel_configs:
       - source_labels: [__meta_dockerswarm_node_address]
